--- a/package.json
+++ b/package.json
@@ -9,24 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.2.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "@emailjs/browser": "^4.3.3",
     "framer-motion": "^11.2.10",
     "lucide-react": "^0.378.0",
-    "@emailjs/browser": "^4.3.3",
-    "react-type-animation": "^3.2.0",
-    "react-intersection-observer": "^9.10.2"
+    "next": "14.2.3",
+    "nodemailer": "^8.0.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-intersection-observer": "^9.10.2",
+    "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
-    "typescript": "^5.4.5",
     "@types/node": "^20.12.12",
+    "@types/nodemailer": "^7.0.9",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "tailwindcss": "^3.4.3",
-    "postcss": "^8.4.38",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
-    "eslint-config-next": "14.2.3"
+    "eslint-config-next": "14.2.3",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.4.5"
   }
 }
